--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,4 +1,3 @@
-
 FROM python:3.8-slim
 
 WORKDIR /app
@@ -7,6 +6,6 @@ COPY . /app
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-EXPOSE 5000
+EXPOSE 8000
 
-CMD ["python", "nlp_model/app.py"]
+CMD ["bash", "run_app.sh"]
