--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -3,13 +3,13 @@ FROM python:3.9-slim
 WORKDIR /api
 
 # Copy only the requirements file first to leverage Docker cache
-COPY requirements.txt /api/
-
+COPY api/requirements.txt /api/
+RUN ls -la /api/requirements.txt
 # Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the rest of the application code
-COPY . /api/
+COPY api/ /api/
 
 # Expose the application port
 EXPOSE 8000
