--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -9,7 +9,7 @@ RUN ls -la /api/requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the rest of the application code
-COPY api/ /api/
+COPY . /api/
 
 # Expose the application port
 EXPOSE 8000
