--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.9-slim
 WORKDIR /api
 
 # Copy only the requirements file first to leverage Docker cache
-COPY api/requirements.txt /api/
+COPY requirements.txt /api/
 RUN ls -la /api/requirements.txt
 # Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
